--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,5 +13,6 @@ services:
       - "./config:/home/node/app/config"
       - "./data:/home/node/app/data"
       - "./plugins:/home/node/app/plugins"
+      - "./public:/home/node/app/public"
       - "./extensions:/home/node/app/public/scripts/extensions/third-party"
     restart: unless-stopped
